homelab/secure-mtls/secure-mtls/policy.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: strict-mtls
  namespace: secure-mtls
spec:
  mtls:
    mode: STRICT
